"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-02-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-43:
	  SPEC directives: allow empty instance reference arguments, 
		so that assert directive works as expected.
	  Test cases added.


2011-02-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-42:
	  hacprsim: new command getcommonports p1 p2
		prints values for ports shared by two processes.
	  Test case added, documented.


2011-01-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-41:
	  hacknet: area/perimeter estimation has been too pessimistic
		for a while, internal diffusion area were not overlapped.
		Now, internal areas are halved per sharer, and 
		overlapping gate edge width is subtracted.
		NOTE: this will break from matching the behavior of netgen.
	  Test cases updated.


2011-01-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-40:
	  hacprsim: better error handling when delcaring channel with
		out-of-range references to bundles/rails.
	  Test case added: channel-test-k-03 (expect-fail).


2011-01-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-39:
	  haco: fix ICE-on-invalid crash on duplicate typedef.
	  Test case added.


2011-01-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-38:
	  hacprsim: reset/initialize now unset/thaw/unfreeze nodes (fixed).
	  Test case added.


2011-01-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-37:
	  CHP front end fixes:
		in some CHP statement error conditions, throw exception
		instead of returning NULL, b/c NULL is interpreted as
		a 'skip' action.  This fixes various accept-invalid bugs.
	  Object/expr/int_expr.h:
		re-declare abstract virtual override for accept(visitor&),