@@ -1,3 +1,3 @@
 Error: Post-mangled node name `B' collides with another node `b'.
-ERROR producing netlist for <top-level>
+Instantiated from -TOP-: 
 Caught exception during netlist generation.
