@@ -1,6 +1,6 @@
 ERROR: rule-literal is not CMOS-implementable.
 ERROR in production rule.
 	~(a | b) -> _c-
-ERROR producing netlist for foo<>
-ERROR producing netlist for <top-level>
+Instantiated from type: foo<>
+Instantiated from -TOP-: 
 Caught exception during netlist generation.
