@@ -1,5 +1,5 @@
 Error: transistor name "OHAI" was already used, and cannot be re-used.
 ERROR in production rule.
 	x & y<;label="OHAI"> -> _z[1]-
-ERROR producing netlist for <top-level>
+Instantiated from -TOP-: 
 Caught exception during netlist generation.
