@@ -2,5 +2,5 @@ Error: in subcircuit <top-level>:
 * GND supply of internal node differs between definition and use: @_int
 ERROR in production rule.
 	@_int & x -> y-
-ERROR producing netlist for <top-level>
+Instantiated from -TOP-: 
 Caught exception during netlist generation.
