@@ -1,0 +1,271 @@
+
+Persistent Object Manager text dump: 
+	i	addr		type		arg	head	tail	size
+	0	##ADDR##	________	0	#HEAD#	#TAIL#	0
+	1	##ADDR##	module__	0	#HEAD#	#TAIL#	##SIZE##
+	2	##ADDR##	namespc_	0	#HEAD#	#TAIL#	44
+	3	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	28
+	4	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	28
+	5	##ADDR##	procplch	0	#HEAD#	#TAIL#	27
+	6	##ADDR##	procplch	0	#HEAD#	#TAIL#	28
+	7	##ADDR##	procdefn	0	#HEAD#	#TAIL#	132
+	8	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	28
+	9	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	28
+	10	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	11	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	12	##ADDR##	procplch	0	#HEAD#	#TAIL#	27
+	13	##ADDR##	portscop	0	#HEAD#	#TAIL#	28
+	14	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	15	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	16	##ADDR##	datadefn	0	#HEAD#	#TAIL#	69
+	17	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	18	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	19	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	20	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	21	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	22	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	23	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	24	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	25	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	26	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	27	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	28	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	29	##ADDR##	procinst	0	#HEAD#	#TAIL#	20
+	30	##ADDR##	proctprf	0	#HEAD#	#TAIL#	20
+	31	##ADDR##	procdefn	0	#HEAD#	#TAIL#	152
+	32	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	28
+	33	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	28
+	34	##ADDR##	pintplch	0	#HEAD#	#TAIL#	29
+	35	##ADDR##	pintinst	0	#HEAD#	#TAIL#	16
+	36	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	37	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	38	##ADDR##	portscop	0	#HEAD#	#TAIL#	28
+	39	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	40	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	41	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	42	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	43	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	44	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	45	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	46	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	47	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	48	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	49	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	50	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	51	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	52	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	53	##ADDR##	PRSrnest	0	#HEAD#	#TAIL#	36
+	54	##ADDR##	PRSpuldn	0	#HEAD#	#TAIL#	21
+	55	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	56	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	57	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	58	##ADDR##	PRSpulup	0	#HEAD#	#TAIL#	21
+	59	##ADDR##	PRSnot__	0	#HEAD#	#TAIL#	12
+	60	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	61	##ADDR##	SPCdrctv	0	#HEAD#	#TAIL#	30
+	62	##ADDR##	pireltex	0	#HEAD#	#TAIL#	22
+	63	##ADDR##	spimvref	0	#HEAD#	#TAIL#	16
+	64	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	65	##ADDR##	footprnt	0	#HEAD#	#TAIL#	509
+	66	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	67	##ADDR##	cnstpb__	0	#HEAD#	#TAIL#	9
+	68	##ADDR##	footprnt	0	#HEAD#	#TAIL#	509
+	69	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	70	##ADDR##	cnstpb__	0	#HEAD#	#TAIL#	9
+	71	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	72	##ADDR##	prcprtcn	0	#HEAD#	#TAIL#	32
+	73	##ADDR##	sprcmref	0	#HEAD#	#TAIL#	16
+	74	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	75	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	76	##ADDR##	footprnt	0	#HEAD#	#TAIL#	508
+	77	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	16
+	78	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	79	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	80	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	81	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	82	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	83	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	84	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	85	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	86	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	87	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	88	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	89	##ADDR##	procinst	0	#HEAD#	#TAIL#	20
+	90	##ADDR##	proctprf	0	#HEAD#	#TAIL#	20
+	91	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	92	##ADDR##	procinst	0	#HEAD#	#TAIL#	20
+	93	##ADDR##	proctprf	0	#HEAD#	#TAIL#	20
+	94	##ADDR##	footprnt	0	#HEAD#	#TAIL#	618
+	95	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	16
+	96	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	12
+
+In module created from: ##FILE## (unrolled) (created)
+In namespace "", we have: {
+  0 parameter-collections
+  4 instantiation-collections
+  0 sub-namespaces
+  2 definitions
+  0 typedefs
+  Definitions:
+    baz = process-definition (defined) baz(
+        bool<> !GND
+        bool<> !Vdd
+        bool<> a
+        bool<> b
+      )
+      In definition "baz", we have: {
+      Instances:
+        !GND = bool<> baz::!GND
+        !Vdd = bool<> baz::!Vdd
+        a = bool<> baz::a
+        b = bool<> baz::b
+        bar = foo<4> baz::bar
+      unroll sequence: 
+        ports: (
+          bool<> !GND
+          bool<> !Vdd
+          bool<> a
+          bool<> b
+        )
+        !GND@[supply=0]
+        !Vdd@[supply=1]
+        foo<4> bar
+        bar ( , , a, b);
+      footprint: {
+        !GND = bool^0 = baz<>::!GND (1) @[ supply_low port-alias ] 
+        !Vdd = bool^0 = baz<>::!Vdd (2) @[ supply_high port-alias ] 
+        a = bool^0 = baz<>::a (3) @[ port-alias sub-FO- sub-FO+ ] 
+        b = bool^0 = baz<>::b (4) @[ port-alias sub-FI- sub-FI+ ] 
+        bar = process foo<4>^0 = baz<>::bar (1) (
+          !GND = bool^0 = baz<>::!GND (1) @[ supply_low port-alias ] 
+          !Vdd = bool^0 = baz<>::!Vdd (2) @[ supply_high port-alias ] 
+          x = bool^0 = baz<>::a (3) @[ port-alias sub-FO- sub-FO+ ] 
+          y = bool^0 = baz<>::b (4) @[ port-alias sub-FI- sub-FI+ ] 
+        )
+        Created state:
+        process instance pool: (0 ports, 1 local, 0 mapped)
+        1	baz<>::bar	foo<4>
+          bool: 1,2,3,4
+        bool instance pool: (4 ports, 0 local, 0 mapped)
+        1	baz<>::!GND @[ supply_low port-alias ]	
+        2	baz<>::!Vdd @[ supply_high port-alias ]	
+        3	baz<>::a @[ port-alias sub-FO- sub-FO+ ]	
+        4	baz<>::b @[ port-alias sub-FI- sub-FI+ ]	
+      }
+      }
+
+    foo = process-definition (defined) foo<
+      pint<> N
+      >(
+        bool<> !GND
+        bool<> !Vdd
+        bool<> x
+        bool<> y
+      )
+      In definition "foo", we have: {
+      Parameters:
+        N = pint<> foo::N
+      Instances:
+        !GND = bool<> foo::!GND
+        !Vdd = bool<> foo::!Vdd
+        x = bool<> foo::x
+        y = bool<> foo::y
+      unroll sequence: 
+        ports: (
+          bool<> !GND
+          bool<> !Vdd
+          bool<> x
+          bool<> y
+        )
+        !GND@[supply=0]
+        !Vdd@[supply=1]
+      prs:
+        {
+        x -> y-
+        ~x -> y+
+        }
+      spec:
+        assert<N<=2>()
+      footprint collection: {
+        <1> {
+          !GND = bool^0 = foo<1>::!GND (1) @[ supply_low port-alias ] 
+          !Vdd = bool^0 = foo<1>::!Vdd (2) @[ supply_high port-alias ] 
+          N = pint^0 value: 1
+          x = bool^0 = foo<1>::x (3) @[ port-alias loc-FO- loc-FO+ ] 
+          y = bool^0 = foo<1>::y (4) @[ port-alias loc-FI- loc-FI+ ] 
+          Created state:
+          bool instance pool: (4 ports, 0 local, 0 mapped)
+          1	foo<1>::!GND @[ supply_low port-alias ]	
+          2	foo<1>::!Vdd @[ supply_high port-alias ]	
+          3	foo<1>::x @[ port-alias loc-FO- loc-FO+ ]	
+          4	foo<1>::y @[ port-alias loc-FI- loc-FI+ ]	
+          resolved prs:
+          x -> y-
+          ~x -> y+
+          rule supply map: (rules, macros, @nodes : Vdd, GND)
+          0..1 none none : 2, 1 | 2, 1
+          resolved specs:
+          assert<true>()
+        }
+        <4> {
+          !GND = bool^0 = foo<4>::!GND (1) @[ supply_low port-alias ] 
+          !Vdd = bool^0 = foo<4>::!Vdd (2) @[ supply_high port-alias ] 
+          N = pint^0 value: 4
+          x = bool^0 = foo<4>::x (3) @[ port-alias loc-FO- loc-FO+ ] 
+          y = bool^0 = foo<4>::y (4) @[ port-alias loc-FI- loc-FI+ ] 
+          Created state:
+          bool instance pool: (4 ports, 0 local, 0 mapped)
+          1	foo<4>::!GND @[ supply_low port-alias ]	
+          2	foo<4>::!Vdd @[ supply_high port-alias ]	
+          3	foo<4>::x @[ port-alias loc-FO- loc-FO+ ]	
+          4	foo<4>::y @[ port-alias loc-FI- loc-FI+ ]	
+          resolved prs:
+          x -> y-
+          ~x -> y+
+          rule supply map: (rules, macros, @nodes : Vdd, GND)
+          0..1 none none : 2, 1 | 2, 1
+          resolved specs:
+          assert<false>()
+        }
+      }
+      }
+
+  Instances:
+    !GND = bool<> !GND
+    !Vdd = bool<> !Vdd
+    bam = baz<> bam
+    bar1 = foo<1> bar1
+}
+
+footprint: {
+  !GND = bool^0 = !GND (1) @[ supply_low ] 
+  !Vdd = bool^0 = !Vdd (2) @[ supply_high ] 
+  bam = process baz<>^0 = bam (2) (
+    !GND = bool^0 = !GND (1) @[ supply_low ] 
+    !Vdd = bool^0 = !Vdd (2) @[ supply_high ] 
+    a = bool^0 = bam.a (5) @[ sub-FO- sub-FO+ ] 
+    b = bool^0 = bam.b (6) @[ sub-FI- sub-FI+ ] 
+  )
+  bar1 = process foo<1>^0 = bar1 (1) (
+    !GND = bool^0 = !GND (1) @[ supply_low ] 
+    !Vdd = bool^0 = !Vdd (2) @[ supply_high ] 
+    x = bool^0 = bar1.x (3) @[ sub-FO- sub-FO+ ] 
+    y = bool^0 = bar1.y (4) @[ sub-FI- sub-FI+ ] 
+  )
+  Created state:
+  process instance pool: (0 ports, 2 local, 1 mapped)
+  1	bar1	foo<1>
+    bool: 1,2,3,4
+  2	bam	baz<>
+    bool: 1,2,5,6
+  private sub-process index map:
+    (2 -> 0)
+    (3 -> 1)
+  bool instance pool: (0 ports, 6 local, 0 mapped)
+  1	!GND @[ supply_low ]	
+  2	!Vdd @[ supply_high ]	
+  3	bar1.x @[ sub-FO- sub-FO+ ]	
+  4	bar1.y @[ sub-FI- sub-FI+ ]	
+  5	bam.a @[ sub-FO- sub-FO+ ]	
+  6	bam.b @[ sub-FI- sub-FI+ ]	
+}
