@@ -1,0 +1,6 @@
+ERROR: assert spec directive failed.
+Error with SPEC directive.
+Instantiated from type: foo<4>
+Instantiated from type: baz<>
+Instantiated from -TOP-: 
+Caught exception during construction of simulator state.
